Bug 168754 - FILESAVE PPTX Special characters in comments not escaped during save
Summary: FILESAVE PPTX Special characters in comments not escaped during save
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium normal
Assignee: Aron Budea
URL:
Whiteboard: target:26.2.0 target:25.8.3
Keywords:
Depends on:
Blocks: PPTX-Corrupted ImpressDraw-Comments
  Show dependency treegraph
 
Reported: 2025-10-08 15:49 UTC by Aron Budea
Modified: 2025-10-20 08:01 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Sample ODP (13.61 KB, application/vnd.oasis.opendocument.presentation)
2025-10-08 15:49 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2025-10-08 15:49:39 UTC
Created attachment 203215 [details]
Sample ODP

The attached ODP contains a comment with the following text: < > & " '
These are special characters in XML, and should be written escaped. However, when the ODP is saved as PPTX, and is unzipped, it can be seen that ppt/comments/comment1.xml includes them as is.
PowerPoint is unable to open such a file.

Observed with LO 26.2.0.0.alpha0+ (8ea8e254a3151f5390f3a10ff156fcaf8e7c5d5c), 4.0.0.3 / Windows.

Also affects: kde239476-1.ppt, kde239476-9.ppt.
Comment 1 Commit Notification 2025-10-08 22:51:19 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6cab4cb50cf67a8dd595fffa107968cb1bd9fd18

tdf#168754 sd: escape comments exported to PPTX

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2025-10-20 08:01:49 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/8602573b3b9509702d8df15128488e032e825c6e

tdf#168754 sd: escape comments exported to PPTX

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.