tdf#168754 sd: escape comments exported to PPTX

Change-Id: Ic0574980ec3d837f7747aaeb54fb8925aff2987f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192072
Tested-by: Jenkins
Reviewed-by: Aron Budea <aron.budea@collabora.com>
(cherry picked from commit 6cab4cb50cf67a8dd595fffa107968cb1bd9fd18)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192082
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>